<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/TopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="015dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/purple_700"
            android:textSize="25sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/TopBar"
        android:gravity="center"
        android:paddingHorizontal="25dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_anxiety" />


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/forget_password_title"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginVertical="30dp"
            android:alpha="0.7"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/forget_password_caption"
            android:textColor="@color/purple_700"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/email_field"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/caption"
            android:gravity="center"
            android:hint="@string/enter_your_email" />

        <Button
            android:id="@+id/submit_fp"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/email_field"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_rectangle"
            android:fontFamily="@font/poppins_bold"
            android:stateListAnimator="@null"
            android:text="@string/send_verification_code"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/progress_bar"/>





</RelativeLayout>