<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context=".vue.authentification.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="-65dp"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/dark_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/vector_register" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="4"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_first_name"
                style="@style/input_field"
                android:layout_width="350dp"
                android:layout_height="52dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_last_name"
                style="@style/input_field"
                android:layout_width="350dp"
                android:layout_height="52dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <AutoCompleteTextView
                android:id="@+id/et_email"
                style="@style/input_field"
                android:layout_width="350dp"
                android:layout_height="52dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_password"
                style="@style/input_field"
                android:layout_width="350dp"
                android:layout_height="52dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_repeat_password"
                style="@style/input_field"
                android:layout_width="350dp"
                android:layout_height="52dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="Repeat Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button"
                android:fontFamily="@font/poppins_regular"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_rectangle"
                android:text="sign up"
                android:layout_marginBottom="10dp"
                android:onClick="performSignUp"
                android:textColor="@color/white"
                android:textSize="20dp" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:gravity="top|center"
                android:paddingHorizontal="30dp"
                >

                <TextView
                    android:id="@+id/bottom_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:layout_marginTop="-5dp"
                    android:text="@string/already_have_a_account"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/signInBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="-10dp"
                    android:text="@string/login_btn"
                    android:onClick="goToLogin"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>